--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="logo"><a href="">Rafi Febrian Suprapto</a></div>
             <div class="menu">
                 <ul>
-                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#Home">Biografi</a></li>
                     <li><a href="#Data Diri">Data Diri</a></li>
                     <li><a href="#Hobi">Hobi</a></li>
                     <li><a href="#Contact">Contact</a></li>
@@ -50,7 +50,7 @@
                     <li>Tempat dan tanggal lahir : Jakarta ,15 Februari 2006</li><br>
                     <ul><li>Pendidikan :</li> 
                         <li>1. Sarjana Bisnis Digital di Universitas Negeri Jakarta</li>  
-                        <li>2. SMA Cindera Mata jurusan Matematika dan Ilmu Penegetahuan Alam</li></ul><br>
+                        <li>2. SMA Cindera Mata jurusan Matematika dan Ilmu Pengetahuan Alam</li></ul><br>
                     <li>Tempat tinggal : Jakarta, Indonesia</li><br>
                     <li>Kegiata rutin : Mengemudi mobil, bermain keyboard, dan belajar invenstasi</li>    
                 </ul>    
