--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="#Home">Biografi</a></li>
-                    <li><a href="#Data Diri">Data Diri</a></li>
+                    <li><a href="#Data-Diri">Data Diri</a></li>
                     <li><a href="#Hobi">Hobi</a></li>
                     <li><a href="#Contact">Contact</a></li>
                     <li><a href="https://love-confession-by-rafi.netlify.app/" class="tbl-biru">Don't Click</a></li>
@@ -40,7 +40,7 @@
             </div>   
         </section>
 
-        <section id="Data Diri">
+        <section id="Data-Diri">
             <div class="kolom2">
                 <img src="fotodatadiri.jpg" alt="fotodatadiri" width="120" height="160">
                 <img src="fotojakarta.jpg" alt="fotojakarta" width="160" height="120">
@@ -54,9 +54,9 @@
                     <li>Tempat tinggal : Jakarta, Indonesia</li><br>
                     <li>Kegiata rutin : Mengemudi mobil, bermain keyboard, dan belajar invenstasi</li>    
                 </ul>    
-            </div>
-            <p><a href="https://www.tiktok.com/@rafi.f.s_?_t=8ql8QiI8U30&_r=1" class="tbl-biru">Tiktok</a></p>
-          
+            </div>   
+            <p><a href="https://www.tiktok.com/@rafi.f.s_?_t=8ql8QiI8U30&_r=1" class="tbl-biru">Tiktok</a></p>   
+        </section>  
         
 
         <section id="Hobi">
