--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafi Febrian Suprapto</title>
+    <link rel="icon" href="fotorafi2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
