--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#Data-Diri">Data Diri</a></li>
                     <li><a href="#Hobi">Hobi</a></li>
                     <li><a href="#Contact">Contact</a></li>
-                    <li><a href="https://love-confession-by-rafi.netlify.app/" class="tbl-biru">Don't Click</a></li>
+                    <li><a href="https://love-confession-by-rafi.netlify.app/" class="tbl-biru" target="_blank">Don't Click</a></li>
                 </ul>
             </div>
         </div>
@@ -37,7 +37,7 @@
                     
                     Saat ini, Rafi tinggal di Jakarta dan terus berusaha mengembangkan dirinya dalam dunia bisnis dan teknologi. Dengan passion yang besar untuk belajar dan beradaptasi dengan perkembangan zaman, ia berambisi untuk membawa inovasi dan solusi di bidang digital yang dapat memberikan dampak positif bagi masyarakat.</p>
                     <h2>The Problems are my dancing partners</h2>
-                    <p><a href="https://www.instagram.com/rafi.febrian.suprapto/profilecard/?igsh=MTRiajVwMWo3NDNsdA==" class="tbl-pink">Instagram</a></p>
+                    <p><a href="https://www.instagram.com/rafi.febrian.suprapto/profilecard/?igsh=MTRiajVwMWo3NDNsdA==" class="tbl-pink" target="_blank">Instagram</a></p>
             </div>   
         </section>
 
@@ -56,7 +56,7 @@
                     <li>Kegiata rutin : Mengemudi mobil, bermain keyboard, dan belajar invenstasi</li>    
                 </ul>    
             </div>   
-            <p><a href="https://www.tiktok.com/@rafi.f.s_?_t=8ql8QiI8U30&_r=1" class="tbl-biru">Tiktok</a></p>   
+            <p><a href="https://www.tiktok.com/@rafi.f.s_?_t=8ql8QiI8U30&_r=1" class="tbl-biru" target="_blank">Tiktok</a></p>   
         </section>  
         
 
